// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected given status is Go 1`] = `
<div>
  <span
    class="badge bg-success"
  >
    Go
  </span>
</div>
`;

exports[`renders as expected given status is Go for Launch 1`] = `
<div>
  <span
    class="badge bg-success"
  >
    Go for Launch
  </span>
</div>
`;

exports[`renders as expected given status is Launch Successful 1`] = `
<div>
  <span
    class="badge bg-success"
  >
    Launch Successful
  </span>
</div>
`;

exports[`renders as expected given status is Success 1`] = `
<div>
  <span
    class="badge bg-success"
  >
    Success
  </span>
</div>
`;

exports[`renders as expected given status is TBD 1`] = `
<div>
  <span
    class="badge bg-warning"
  >
    TBD
  </span>
</div>
`;

exports[`renders as expected given status is unknown 1`] = `
<div>
  <span
    class="badge bg-info"
  >
    unknown
  </span>
</div>
`;
